test_regress/t/t_tagged_union.out
%Error-UNSUPPORTED: t/t_tagged_union.v:27:5: Unsupported: void (for tagged unions)
   27 |     void Invalid;
      |     ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_union.v:34:5: Unsupported: void (for tagged unions)
   34 |     void          Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:55:5: Unsupported: void (for tagged unions)
   55 |     void           Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:77:5: Unsupported: void (for tagged unions)
   77 |     void    Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:83:5: Unsupported: void (for tagged unions)
   83 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:92:5: Unsupported: void (for tagged unions)
   92 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:99:5: Unsupported: void (for tagged unions)
   99 |     void   Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:105:5: Unsupported: void (for tagged unions)
  105 |     void  Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:114:5: Unsupported: void (for tagged unions)
  114 |     void  Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:135:11: Unsupported: tagged union
  135 |     vi1 = tagged Invalid;
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:136:11: Unsupported: tagged union
  136 |     vi2 = tagged Invalid;
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:139:11: Unsupported: tagged union
  139 |     vi1 = tagged Valid (42);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:142:11: Unsupported: tagged union
  142 |     vi2 = tagged Valid (23 + 34);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:146:10: Unsupported: tagged union
  146 |     mt = tagged Invalid;
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:148:10: Unsupported: tagged union
  148 |     mt = tagged IntVal (32'h12345678);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:151:10: Unsupported: tagged union
  151 |     mt = tagged ShortVal (16'hABCD);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:154:10: Unsupported: tagged union
  154 |     mt = tagged ByteVal (8'h5A);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:157:10: Unsupported: tagged union
  157 |     mt = tagged BitVal (1'b1);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:161:10: Unsupported: tagged union
  161 |     mt = tagged Byte8NonZeroLSB (8'hA5);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:164:10: Unsupported: tagged union
  164 |     mt = tagged Word16NonZeroLSB (16'h1234);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:168:10: Unsupported: tagged union
  168 |     mt = tagged Word32LittleEndian (32'hDEADBEEF);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:171:10: Unsupported: tagged union
  171 |     mt = tagged Word16LittleEndian (16'hCAFE);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:175:10: Unsupported: tagged union
  175 |     mt = tagged Wide60 (60'hFEDCBA987654321);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:178:10: Unsupported: tagged union
  178 |     mt = tagged Wide60NonZeroLSB (60'h123456789ABCDEF);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:181:10: Unsupported: tagged union
  181 |     mt = tagged Wide60LittleEndian (60'hABCDEF012345678);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:185:10: Unsupported: tagged union
  185 |     mt = tagged Wide90 (90'hFF_FFFFFFFF_FFFFFFFF_FFFF);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:188:10: Unsupported: tagged union
  188 |     mt = tagged Wide90NonZeroLSB (90'hDE_ADBEEFCA_FEBABE12_3456);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:191:10: Unsupported: tagged union
  191 |     mt = tagged Wide90LittleEndian (90'h11_11111122_22222233_3333);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:195:10: Unsupported: tagged union
  195 |     at = tagged Invalid;
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:197:10: Unsupported: tagged union
  197 |     at = tagged Scalar (999);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:200:10: Unsupported: tagged union
  200 |     at = tagged UnpackedArr '{100, 200, 300, 400};
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:206:10: Unsupported: tagged union
  206 |     at = tagged UnpackedArr2D '{'{32'hA, 32'hB, 32'hC}, '{32'hD, 32'hE, 32'hF}};
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:215:13: Unsupported: tagged union
  215 |     instr = tagged Add '{5'd1, 5'd2, 5'd3};
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:221:13: Unsupported: tagged union
  221 |     instr = tagged Add '{reg2:5'd10, regd:5'd20, reg1:5'd5};
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:227:13: Unsupported: tagged union
  227 |     instr = tagged Jmp (tagged JmpU 10'd512);
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:227:25: Unsupported: tagged union
  227 |     instr = tagged Jmp (tagged JmpU 10'd512);
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:231:13: Unsupported: tagged union
  231 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:231:25: Unsupported: tagged union
  231 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:236:13: Unsupported: tagged union
  236 |     instr = tagged Jmp (tagged JmpC '{cc:2'd3, addr:10'd100});
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:236:25: Unsupported: tagged union
  236 |     instr = tagged Jmp (tagged JmpC '{cc:2'd3, addr:10'd100});
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:241:11: Unsupported: tagged union
  241 |     cht = tagged Invalid;
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:242:11: Unsupported: tagged union
  242 |     cht = tagged Handle (null);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:246:11: Unsupported: tagged union
  246 |     clt = tagged Invalid;
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:247:11: Unsupported: tagged union
  247 |     clt = tagged Obj (obj);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:251:10: Unsupported: tagged union
  251 |     rt = tagged Invalid;
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:252:10: Unsupported: tagged union
  252 |     rt = tagged RealVal (3.14159);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:256:10: Unsupported: tagged union
  256 |     rt = tagged ShortRealVal (2.5);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:260:10: Unsupported: tagged union
  260 |     st = tagged Invalid;
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:261:10: Unsupported: tagged union
  261 |     st = tagged StrVal ("hello");
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:265:10: Unsupported: tagged union
  265 |     et = tagged Invalid;
      |          ^~~~~~
%Error: Exiting due to
